--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -8,6 +8,14 @@
   text-align: center;
 }
 
+.analysis-title{
+  font-size: 1.8rem;
+  font-weight: 600;
+  color:#4c0070;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
 .score-container{
   display: flex;
   align-items: center;
@@ -16,7 +24,7 @@
   width: 100%;
   max-width: 200px;
   aspect-ratio: 1/1;
-  margin: 0 auto;
+  margin: 2.5rem auto;
 }
 
 .score-text {
@@ -51,22 +59,30 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  align-items: center;
 }
 
 .summary-item {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  width: 85%;
-  max-width: 320px;
-  font-size: 1rem;
+  padding: 0.6rem 1rem;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  font-size: 0.95rem;
 }
 
-.icon{
-  font-size: 1.4rem;
-  margin-right: 0.5rem;
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 28px;
+  height: 28px;
+  border-radius: 6px;
+  color: #fff;
+  font-size: 1rem;
+  margin-right: 0.75rem;
 }
+
 
 .label{
   flex: 1;
@@ -84,4 +100,17 @@
   font-size: 1rem;
   color: #334155;
   text-align: center;
+}
+
+.feedback-button{
+ background-color: #c084fc;
+  color: white;
+  border: none;
+  border-radius: 9999px;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  margin-top: 4rem;
+  transition: background-color 0.3s ease;
 }
